[package]
name = "nails-client"
version = "0.12.0"
authors = ["Stu Hood <stuhood@gmail.com>"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/stuhood/nails"
homepage = "https://github.com/stuhood/nails"
description = """
A Nailgun client binary, intended to be equivalent to the C and Python clients.
"""
edition = "2018"

[dependencies]
env_logger = "0.8"
futures = "0.3"
log = "0.4"
nails = { path = "../nails", version = "=0.12.0" }
tokio = { version = "1.0", features = ["macros", "net", "io-std", "io-util",  "rt-multi-thread"] }
