[package]
name = "nails-example"
version = "0.3.0"
authors = ["Stu Hood <stuhood@gmail.com>"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/stuhood/nails"
homepage = "https://github.com/stuhood/nails"
description = """
An example Nailgun server binary that configures and launches a server using `nails-fork`.
"""
edition = "2018"

[dependencies]
nails = { path = "../nails", version = "=0.3.0" }
nails-fork = { path = "../nails-fork", version = "=0.3.0" }
futures = "0.3"
tokio = { git = "https://github.com/tokio-rs/tokio", rev = "7e35922a1d282b1e3dadf037cd237be336b331fb" }
