[package]
name = "nails-example"
version = "0.12.0"
authors = ["Stu Hood <stuhood@gmail.com>"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/stuhood/nails"
homepage = "https://github.com/stuhood/nails"
description = """
An example Nailgun server binary that configures and launches a server using `nails-fork`.
"""
edition = "2018"

[dependencies]
env_logger = "0.9"
futures = "0.3"
nails = { path = "../nails", version = "=0.12.0" }
nails-fork = { path = "../nails-fork", version = "=0.12.0" }
tokio = { version = "1.8", features = ["macros", "net", "rt-multi-thread"] }
