[package]
name = "nails-fork"
version = "0.3.0"
authors = ["Stu Hood <stuhood@gmail.com>"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/stuhood/nails"
homepage = "https://github.com/stuhood/nails"
description = """
A `Nail` trait implementation that forks a process as the user running the server.
"""
edition = "2018"

[dependencies]
nails = { path = "../nails", version = "=0.3.0" }
bytes = "0.4"
futures = "0.3"
tokio = { git = "https://github.com/tokio-rs/tokio", rev = "7e35922a1d282b1e3dadf037cd237be336b331fb" }
tokio-util = { git = "https://github.com/tokio-rs/tokio", rev = "7e35922a1d282b1e3dadf037cd237be336b331fb" }
