[package]
name = "nails-fork"
version = "0.10.0"
authors = ["Stu Hood <stuhood@gmail.com>"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/stuhood/nails"
homepage = "https://github.com/stuhood/nails"
description = """
A `Nail` trait implementation that forks a process as the user running the server.
"""
edition = "2018"

[dependencies]
bytes = "0.5"
futures = "0.3"
log = "0.4"
nails = { path = "../nails", version = "=0.10.0" }
tokio = { version = "0.2", features = ["rt-core", "process", "macros"] }
tokio-util = { version = "0.2", features = ["codec"] }
