[package]
name = "nails"
version = "0.3.0"
authors = ["Stu Hood <stuhood@gmail.com>"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/stuhood/nails"
homepage = "https://github.com/stuhood/nails"
description = """
[Nailgun](http://martiansoftware.com/nailgun/protocol.html) client and server protocols and a `Nail`
trait that consuming crates can implement to plug in the logic that they would like to keep warm in
a nailgun server.
"""
edition = "2018"

[dependencies]
bytes = "0.4"
futures = "0.3"
log = "0.4"
tokio = { git = "https://github.com/tokio-rs/tokio", rev = "7e35922a1d282b1e3dadf037cd237be336b331fb" }
tokio-util = { git = "https://github.com/tokio-rs/tokio", rev = "7e35922a1d282b1e3dadf037cd237be336b331fb" }
