[package]
name = "nails"
version = "0.4.1"
authors = ["Stu Hood <stuhood@gmail.com>"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/stuhood/nails"
homepage = "https://github.com/stuhood/nails"
description = """
[Nailgun](http://martiansoftware.com/nailgun/protocol.html) client and server protocols and a `Nail`
trait that consuming crates can implement to plug in the logic that they would like to keep warm in
a nailgun server.
"""
edition = "2018"

[dependencies]
bytes = "0.5"
byteorder = "1"
futures = "0.3"
log = "0.4"
tokio = { version = "0.2", features = ["sync", "tcp"] }
tokio-util = { version = "0.2", features = ["codec"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["dns", "macros", "rt-core", "stream"] }
